# create-bazel-workspace

./: BUILD.bazel  README.md  WORKSPACE  create-bazel-workspace.go
android/: BUILD.bazel.bzl  WORKSPACE.bzl  WORKSPACE.tpl  loads.bzl  post_create.txt
android/examples/com/java/bazel/: BUILD  jni.cc  jni_dep.cc
base/: WORKSPACE.bzl  post_create.txt
go/: BUILD.bazel.bzl  WORKSPACE.bzl  loads.bzl  post_create.txt
rust/: WORKSPACE.tpl  loads.bzl  post_create.txt
scala/: BUILD.bazel.bzl  BUILD.bazel.tpl  WORKSPACE.tpl  post_create.txt
